Casino/src/objects/Transaction__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Player__c</fullName>
        <label>Player</label>
        <referenceTo>Player__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Deposit</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Withdrawal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Transaction</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>T-{00000}</displayFormat>
        <label>Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transactions</pluralLabel>
    <recordTypes>
        <fullName>Deposit</fullName>
        <active>true</active>
        <label>Deposit</label>
    </recordTypes>
    <recordTypes>
        <fullName>Withdrawal</fullName>
        <active>true</active>
        <label>Withdrawal</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>